# mementor

./: .gitignore  CMakeLists.txt  Makefile
.github/workflows/: ubuntu.yml
ci/: build.arch.Dockerfile  windows-mingw.Makefile
cmake/: FindFFMPEG.cmake  GenerateSemanticVersionHeader.cmake  GenerateSymbolExportHeader.cmake  export.cmake  ffmpeg.cmake  version.cmake
include/mementor/: access_unit_adapter.h  curl.h  decoder.h  demuxer.h  extraction.h  resample.h  response.h  source.h
src/: access_unit_adapter.cpp  birthday.cpp.in  curl.cpp  decoder.cpp  decoder.h  demuxer.cpp  demuxer.h  external_tool.cpp  extraction.cpp  frame_ptr.cpp  frame_ptr.h  hash_fnv1a.cpp  interruption.cpp  interruption.h  logging.cpp  logging.h  logging_boost.cpp  logging_boost.h  logging_macro.cpp  logging_macro.h  ntp.cpp  options.cpp  packet_adapter.cpp  packet_adapter.h  packet_ptr.cpp  resample.cpp  resample.h  singleton.cpp  source.cpp  source.h  track_adapter.cpp  track_adapter.h  transport_error.cpp  uuid.cpp  version.cpp.in
test/: sb_splitter.cpp  ut_curl.cpp  ut_external_tool.cpp  ut_hash_fnv1a.cpp  ut_interruption.cpp  ut_ntp.cpp  ut_options.cpp
